fix bug on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -4,5 +4,5 @@
 }
 
 .two > img {
-    width: 250px;
+    width: 100%;
 }
